修正: TruffleHogセキュリティスキャンの初回コミット対応
初回コミット時にBASEとHEADが同じになりエラーが発生する問題を修正しました。

変更内容:
- github.event.beforeが初回コミット(0000...)の場合は空文字列を使用
- これにより全ファイルがスキャン対象となり、エラーを回避

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -29,8 +29,8 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.repository.default_branch }}
-          head: HEAD
+          base: ${{ github.event.before != '0000000000000000000000000000000000000000' && github.event.before || '' }}
+          head: ${{ github.sha }}
 
   dependency-check:
     name: Dependency Check
